Add base for tiktok comment, instagram dm and messenger dm
